cabal-version   : 2.2

name            : ulme-json
version         : 0.1.0
synopsis        : parse and print json data
homepage        : https://git.sr.ht/~aramis/ulme-json
stability       : experimental

copyright       : (c) 2020 Aramís Concepción Durán
license         : GPL-3.0-only
license-file    : LICENSE

author          : Aramís Concepción Durán <aramis@systemli.org>
maintainer      : Aramís Concepción Durán <aramis@systemli.org>

build-type          : Simple
extra-source-files  : README.md

description :
    This package contains a JSON data type, a JSON
    parser, and functions for JSON serialisation and
    pretty-printing.


library
    default-language    : Haskell2010
    hs-source-dirs      : src

    ghc-options :
        -Werror
        -Weverything
        -Wno-all-missed-specialisations
        -Wno-missing-import-lists
        -Wno-missing-local-signatures
        -Wno-monomorphism-restriction
        -Wno-redundant-constraints
        -Wno-safe
        -Wno-type-defaults
        -Wno-unsafe

    default-extensions :
        ApplicativeDo
        BlockArguments
        DuplicateRecordFields
        LambdaCase
        NamedFieldPuns
        NoImplicitPrelude
        OverloadedStrings
        PackageImports
        RecordWildCards
        Strict

    build-depends :
      , base == 4.12.*

     -- source repo packages
      , ulme
      , ulme-parse

    exposed-modules :
        Ulme.Json
        Ulme.Json.Parse
        Ulme.Json.Pretty


source-repository head
    type        : git
    location    : https://git.sr.ht/~aramis/ulme-json
