cabal-version           : 2.2
name                    : ulme-json
version                 : 0.7.0
synopsis                : parse and print json data
homepage                : https://git.sr.ht/~aramis/ulme-json
copyright               : (c) 2019-2022 Aramís Concepción Durán
license                 : GPL-3.0-only
license-file            : LICENSE
author                  : Aramís Concepción Durán <aramis@systemli.org>
maintainer              : Aramís Concepción Durán <aramis@systemli.org>
build-type              : Simple
extra-source-files      : README.md
description             : This package contains a JSON data type, a JSON parser, and functions
                          for JSON serialisation and pretty-printing.


flag dev
    default             : False
    manual              : True


library
    default-language    : Haskell2010
    hs-source-dirs      : src

    ghc-options         : -Werror
                          -Weverything
                          -Wno-all-missed-specialisations
                          -Wno-missing-deriving-strategies
                          -Wno-missing-import-lists
                          -Wno-missing-kind-signatures
                          -Wno-missing-local-signatures
                          -Wno-missing-safe-haskell-mode
                          -Wno-monomorphism-restriction
                          -Wno-operator-whitespace
                          -Wno-redundant-constraints
                          -Wno-safe
                          -Wno-type-defaults
                          -Wno-unsafe
    if flag(dev)
        ghc-options     : -Wno-missing-export-lists
                          -Wno-missing-exported-signatures
                          -Wno-missing-signatures
                          -Wno-unused-binds
                          -Wno-unused-imports
                          -Wno-unused-matches
                          -Wno-unused-packages

    default-extensions  : AllowAmbiguousTypes
                          ApplicativeDo
                          BinaryLiterals
                          BlockArguments
                          ConstraintKinds
                          DeriveAnyClass
                          DeriveGeneric
                          DuplicateRecordFields
                          ExplicitForAll
                          ExtendedDefaultRules
                          FlexibleContexts
                          FlexibleInstances
                          GeneralisedNewtypeDeriving
                          HexFloatLiterals
                          ImportQualifiedPost
                          LambdaCase
                          MultiParamTypeClasses
                          NamedFieldPuns
                          NegativeLiterals
                          NoImplicitPrelude
                          NumDecimals
                          NumericUnderscores
                          OverloadedRecordDot
                          OverloadedStrings
                          PackageImports
                          RecordWildCards
                          RecursiveDo
                          ScopedTypeVariables
                          Strict
                          TupleSections

    build-depends       : base >= 4.14
                     -- source repo packages
                        , ulme
                        , ulme-parse

    exposed-modules     : Ulme.Json
                          Ulme.Json.Parse
                          Ulme.Json.Pretty


source-repository head
    type                : git
    location            : https://git.sr.ht/~aramis/ulme-json
